# fortherekord

./: .flake8  .gitignore  .spotify_cache  README.md  build.bat  compile.bat  compile.py  coverage.bat  e2e_tests.bat  fix_corrupted_keys.py  fortherekord.bat  install.bat  pyproject.toml  run.bat  run_e2e_tests.bat  run_unit_tests.bat  smart_title_cleanup.py  test.bat  test_changes_dump.json  test_clean.py  test_e2e.bat  unit_test.bat  unit_tests.bat  unittest.bat
.github/: copilot-instructions.md
.github/workflows/: compile.yml
ps1/: Analyse-RekordboxLibrary.ps1  Fix-Playlists.ps1  README.md  Test-Spotify.ps1  Update-MusicFolders.ps1  Update-RekordboxLibrary.config  Update-RekordboxLibrary.ps1  Update-Spotify.ps1  library-import.xml  pythonlib.txt
specs/: Application.md  ArtistFollowing.md  Configuration.md  FileMatching.md  FollowArtists.md  MusicLibrary.md  MusicLibraryInterface.md  MusicLibraryProcessor.md  PlaylistSync.md  README.md  Rekordbox.md  RekordboxMetadata.md  Spotify.md
specs/common/: Build.md  CICD.md  ErrorHandling.md  Logging.md  Python.md  Testing.md
src/: README.md
src/fortherekord/: README.md  __init__.py  __main__.py  _version.py  cli_tools.py  config.py  file_utils.py  main.py  mapping_cache.py  matching.py  models.py  music_library.py  music_library_processor.py  playlist_sync.py  rekordbox.py  rekordbox_library.py  rekordbox_metadata_processor.py  search_utils.py  spotify.py  spotify_library.py  utils.py
tests/: README.md  conftest.py  test___main__.py  test_config.py  test_database_safety.py  test_e2e.py  test_file_utils.py  test_main.py  test_main_module.py  test_matching.py  test_models.py  test_playlist_sync.py  test_rekordbox.py  test_rekordbox_library.py  test_rekordbox_metadata_processor.py  test_search_utils.py  test_spotify.py  test_spotify_library.py
tests/e2e/: README.md  __init__.py  conftest.py  e2e_test_utils.py  test_basic_library_parsing_without_spotify.py  test_caching_behavior_and_performance.py  test_e2e_disabled_processor_spotify_enabled.py  test_e2e_help_command.py  test_e2e_metadata_processing_workflow.py  test_e2e_process_library.py  test_e2e_process_library_dry_run.py  test_e2e_process_library_spotify_sync.py  test_e2e_process_library_spotify_sync_dry_run.py  test_e2e_spotify_playlist_sync.py  test_e2e_spotify_playlist_sync_dry_run.py  test_e2e_spotify_playlist_sync_invalid_credentials.py  test_e2e_spotify_playlist_sync_processor_disabled.py  test_e2e_spotify_sync.py  test_e2e_spotify_sync_dry_run.py  test_e2e_spotify_sync_invalid_credentials.py  test_e2e_version_command.py  test_full_spotify_sync_workflow.py  test_library.xml  test_playlist_remapping_and_management_workflow.py  test_text_processing_and_normalization_workflow.py
tests/unit/: __init__.py  conftest.py  test_cli_tools.py  test_config.py  test_database_safety.py  test_main.py  test_main_module.py  test_mapping_cache.py  test_models.py  test_music_library.py  test_music_library_processor.py  test_playlist_sync.py  test_rekordbox_library.py  test_spotify_library.py
